--- a/a.plist
+++ b/a.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://www.3m177.com/file/2142139592@qq.com/testmobileproversion.ipa</string>
+					<string>https://github.com/chhsh122/plist/edit/master/testmobileproversion.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
