--- a/a.plist
+++ b/a.plist
@@ -1,43 +1,54 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
+<plist version="1.0">
 <dict>
-	<key>items</key>
-	<array>
-		<dict>
-			<key>assets</key>
-			<array>
-				<dict>
-					<key>kind</key>
-					<string>software-package</string>
-					<key>url</key>
-					<string>https://github.com/chhsh122/plist/edit/master/testmobileproversion.ipa</string>
-				</dict>
-				<dict>
-					<key>kind</key>
-					<string>display-image</string>
-					<key>url</key>
-					<string>https://www.3m177.com/file/2142139592@qq.com/testmobileproversion.png</string>
-				</dict>
-				<dict>
-					<key>kind</key>
-					<string>full-size-image</string>
-					<key>url</key>
-					<string>https://www.3m177.com/file/2142139592@qq.com/testmobileproversion.png</string>
-				</dict>
-			</array>
-			<key>metadata</key>
-			<dict>
-				<key>bundle-identifier</key>
-				<string>com.moxi104.demo</string>
-				<key>bundle-version</key>
-				<string>1.0.0</string>
-				<key>kind</key>
-				<string>software</string>
-				<key>title</key>
-				<string>testmobileproversion</string>
-			</dict>
-		</dict>
-	</array>
+ <key>items</key>
+ <array>
+  <dict>
+   <key>assets</key>
+   <array>
+    <dict>
+     <key>kind</key>
+     <string>software-package</string>
+     <key>url</key>
+     <!-- http或者https链接的ipa文件地址 -->
+     <string>https://media.zhybz.net/ios/shanghai/12.ipa</string>
+    </dict>
+    <dict>
+     <key>kind</key>
+     <string>full-size-image</string>
+     <key>needs-shine</key>
+     <true/>
+     <key>url</key>
+     <!-- http或者https链接的图片地址，可直接使用app对应的icon（分辨率没强制要求） -->
+     <string>https://ad.infoxgame.com/YinHuOA-H5/images/logo_im.png</string>
+    </dict>
+    <dict>
+     <key>kind</key>
+     <string>display-image</string>
+     <key>needs-shine</key>
+     <true/>
+     <key>url</key>
+     <!-- http或者https链接的小图片地址，可直接使用app对应的icon（分辨率没强制要求） -->
+     <string>https://ad.infoxgame.com/YinHuOA-H5/images/logo_im.png</string>
+    </dict>
+   </array>
+   <key>metadata</key>
+   <dict>
+    <key>bundle-identifier</key>
+    <!-- BundleID，就是新建app时的包名 -->
+    <string>com.id.org.yycp.sdls</string>
+    <key>bundle-version</key>
+    <!-- 版本号 -->
+    <string>1.0.0</string>
+    <key>kind</key>
+    <string>software</string>
+    <key>title</key>
+    <!-- 安装app时的提示信息 -->
+    <string>YinHu App 正在安装中…</string>
+   </dict>
+  </dict>
+ </array>
 </dict>
 </plist>
